--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<h1>CI/CD Working Successfully</h1>
-<p>Deployed automatically from GitHub to AWS EC2</p>
-</body>
+  <body>
+    <h1>Deployed via CI/CD 🚀</h1>
+    <p>This file came from Git push</p>
+  </body>
 </html>
