--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <h1>Deployed via CI/CD 🚀</h1>
-    <p>This file came from Git push</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </body>
 </html>
