Update name again

--- a/index.html
+++ b/index.html
@@ -810,10 +810,10 @@
             <div class="member-image">
               <img
                 src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80"
-                alt="Sarah Chan"
+                alt="Sarah Chane"
               />
             </div>
-            <h3 class="member-name">Sarah Chan</h3>
+            <h3 class="member-name">Sarah Chane</h3>
             <p class="member-role">Lead Developer</p>
             <p>Full-stack developer specializing in modern web technologies</p>
             <div class="social-links">
